Fixed title alignment

--- a/css/style.css
+++ b/css/style.css
@@ -376,11 +376,11 @@ Header
 .header .top-title {
     position: absolute;
     top: 2%; /* Adjust this value as needed */
-    left: 18%;
+    /* left: 11%; */
     color: #c9c9c9;
     font-size: 4rem;
     font-weight: 700;
-    padding-left: 20px; /* Adds some padding from the left edge of the header */
+    padding-left: 10px; /* Adds some padding from the left edge of the header */
     width: 100%; /* Ensures it spans the full width if needed for background or other styling purposes */
     text-align: left;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2); /* Enhances readability against backgrounds */
@@ -944,8 +944,10 @@ Partners
     box-shadow: 0px 0px 0px 0px #ebeef0;
     vertical-align: middle;
 	margin: 0 auto;
-	height: 50px;
+	height: 100px;
 	padding: 0px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	text-align: center;
 	vertical-align: center;
 }
